--- a/src/components/AppLayout/AppFooter/AppFooter.css
+++ b/src/components/AppLayout/AppFooter/AppFooter.css
@@ -13,7 +13,7 @@ footer a:focus {
   text-decoration: underline;
 }
 
-footer .app-footer {
+footer .site-footer {
   margin: 20px 0;
   font-size: 12px;
   width: 100%;
